--- a/demos/unified/host/Syrna.FileManagement.UnifiedDemo.Blazor.Server.Host/Syrna.FileManagement.UnifiedDemo.Blazor.Server.Host.csproj
+++ b/demos/unified/host/Syrna.FileManagement.UnifiedDemo.Blazor.Server.Host/Syrna.FileManagement.UnifiedDemo.Blazor.Server.Host.csproj
@@ -42,21 +42,9 @@
 		<PackageReference Include="Volo.Abp.Identity.Blazor.Server" />
 		<PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" />
 		<PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" />
-	</ItemGroup>
 
-	<ItemGroup>
-		<Compile Remove="EntityFrameworkCore\**" />
-		<Compile Remove="Logs\**" />
-		<Compile Remove="Migrations\**" />
-		<Content Remove="EntityFrameworkCore\**" />
-		<Content Remove="Logs\**" />
-		<Content Remove="Migrations\**" />
-		<EmbeddedResource Remove="EntityFrameworkCore\**" />
-		<EmbeddedResource Remove="Logs\**" />
-		<EmbeddedResource Remove="Migrations\**" />
-		<None Remove="EntityFrameworkCore\**" />
-		<None Remove="Logs\**" />
-		<None Remove="Migrations\**" />
+		<PackageReference Include="Volo.Abp.BlobStoring.FileSystem" />
+		<PackageReference Include="Volo.Abp.BackgroundJobs" />
 	</ItemGroup>
 
 	<ItemGroup>
