--- a/demos/unified/host/Syrna.FileManagement.Web.Unified/Syrna.FileManagement.Web.Unified.csproj
+++ b/demos/unified/host/Syrna.FileManagement.Web.Unified/Syrna.FileManagement.Web.Unified.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="Volo.Abp.Swashbuckle" />
 
 		<PackageReference Include="Volo.Abp.BlobStoring.FileSystem" />
+		<PackageReference Include="Volo.Abp.BackgroundJobs" />
 	</ItemGroup>
 
 	<ItemGroup>
